- Manage best time for each difficulty - Store the last difficulty played for the next session - About box

--- a/demineur/App.config
+++ b/demineur/App.config
@@ -1,6 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="minesweeper.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <minesweeper.Properties.Settings>
+            <setting name="difficulty" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="mark" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="beginnerName" serializeAs="String">
+                <value>Anonymous</value>
+            </setting>
+            <setting name="beginnerTime" serializeAs="String">
+                <value>9999</value>
+            </setting>
+            <setting name="intermediateName" serializeAs="String">
+                <value>Anonymous</value>
+            </setting>
+            <setting name="intermediateTime" serializeAs="String">
+                <value>9999</value>
+            </setting>
+            <setting name="expertName" serializeAs="String">
+                <value>Anonymous</value>
+            </setting>
+            <setting name="expertTime" serializeAs="String">
+                <value>9999</value>
+            </setting>
+        </minesweeper.Properties.Settings>
+    </userSettings>
 </configuration>
