--- a/demineur/minesweeper.csproj
+++ b/demineur/minesweeper.csproj
@@ -12,6 +12,7 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -24,7 +25,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -54,12 +54,32 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutBox1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AboutBox1.Designer.cs">
+      <DependentUpon>AboutBox1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Difficulty.cs" />
+    <Compile Include="FormBestTimes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormBestTimes.Designer.cs">
+      <DependentUpon>FormBestTimes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="formCongrats.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formCongrats.Designer.cs">
+      <DependentUpon>formCongrats.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormCustom.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +100,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AboutBox1.resx">
+      <DependentUpon>AboutBox1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormBestTimes.resx">
+      <DependentUpon>FormBestTimes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formCongrats.resx">
+      <DependentUpon>formCongrats.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormCustom.resx">
       <DependentUpon>FormCustom.cs</DependentUpon>
     </EmbeddedResource>
